Fix soft proofing settings affecting other views

Contrary to the description, setProofingOptions() was messing with the
options stored inside the image.
Updating settings also avoids unnecessary canvas updates now when
soft proofing is not active.

BUG:399723